<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">No Lines 2</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="escolha_a_hora">Escolha a hora:</string>
    <string name="agendar">Agendar</string>
    <string name="escolha_a_data">Escolha a data:</string>
    <string name="escolha_o_sector">Escolha o sector:</string>
    <string name="nome">Nome:</string>
    <string name="email">Email:</string>
    <string name="idade">Idade:</string>
    <string name="telefones_258_849119978_258_878727900">Telefones: +258 849119978 / +258 878727900</string>
    <string name="instagram_leo_butne">instagram: @leo_butne</string>
    <string name="nosso_email_leonardobutne78_gmail_com">Nosso email: leonardobutne78@gmail.com</string>
    <string name="leomardobutne78_gmail_com">leomardobutne78@gmail.com</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="confirmar_senha">Confirmar senha:</string>
    <string name="cadastro">Cadastro</string>
    <string name="senha">Senha:</string>
    <string name="pelo_menos_6_digitos">pelo menos 6 digitos</string>
    <string name="title_activity_login" />
    <string name="title_activity_main">MainActivity</string>
    <string name="contacto">Contacto</string>
    <string name="sector">Sector:</string>
    <string name="data">Data</string>
    <string name="terminar_sessao">Terminar sessao</string>
    <string name="clique_no_icon_ao_lado">clique no icon ao lado</string>

    <string-array name="departamentos">
        <item>Cicurgia</item>
        <item>Maternidade</item>
        <item>Estomatologia</item>
        <item>Oftamologia</item>
    </string-array>


</resources>