<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".FormCadastro">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:text="@string/cadastro"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:contentDescription="TODO"
        android:textAlignment="center"
        app:srcCompat="@drawable/cadastro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Nome:"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edt_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="digite aqui o seu nome"
            android:inputType="textPersonName"
            android:textColorHint="#757575"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Telefone:"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edt_telefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="ex: +258 8xxxxxxxx"
            android:inputType="textPersonName"
            android:textColorHint="#757575"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edt_email_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="examplo@gmail.com"
            android:inputType="textEmailAddress"
            android:textColorHint="#757575"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/senha"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edt_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/pelo_menos_6_digitos"
            android:inputType="numberPassword"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmar_senha"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edt_senha2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="digite a senha novamente"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:textColorHint="#757575"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/cadastrar"
        android:textColor="#212121" />

</LinearLayout>